--- a/academics.html
+++ b/academics.html
@@ -7,6 +7,7 @@
     <title>Academics - Shree Malatesh English Medium School</title>
     <link rel="shortcut icon" href="./images/logo.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
+    <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
