--- a/admissions.html
+++ b/admissions.html
@@ -55,6 +55,10 @@
                     <li class="nav-item">
                         <a href="contact.html" class="nav-link">Contact</a>
                     </li>
+                    <br>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link"></a>
+                    </li>
                 </ul>
             </div>
         </nav>
