--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,10 @@
                     <li class="nav-item">
                         <a href="contact.html" class="nav-link active">Contact</a>
                     </li>
+                    <br>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link"></a>
+                    </li>
                 </ul>
             </div>
         </nav>
