--- a/downloads.html
+++ b/downloads.html
@@ -49,6 +49,10 @@
                     <li class="nav-item">
                         <a href="contact.html" class="nav-link">Contact</a>
                     </li>
+                    <br>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link"></a>
+                    </li>
                 </ul>
             </div>
         </nav>
