--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/logo.jpeg" type="image/x-icon">
-    <title>About Us - Shree Malatesh English Medium School</title>
+    <title>About Us - Shri Malatesh English Medium Primary And High school Gourapur</title>
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -17,7 +17,7 @@
             <div class="nav-container">
                 <div class="logo">
                     <img src="images/logo.jpeg" alt="School Logo" class="logo-image">
-                    <span class="logo-text">SHREE MALATESH ENGLISH MEDIUM SCHOOL</span>
+                    <span class="logo-text">Shri Malatesh English Medium Primary And High school Gourapur</span>
                 </div>
                 <div class="nav-toggle" id="mobile-menu">
                     <span class="bar"></span>
@@ -74,7 +74,7 @@
                 <div class="about-grid">
                     <div class="about-text">
                         <h2>Our School</h2>
-                        <p>Shree Malatesh English Medium School, located in Gourapur, TQ DI: Haveri 581110, is a premier
+                        <p>Shri Malatesh English Medium Primary And High school Gourapur, located in Gourapur, TQ DI: Haveri 581110, is a premier
                             educational institution dedicated to providing quality education and holistic development
                             for students from LKG to 10th Standard.</p>
                         <p>Our school has been serving the community with excellence in education, focusing on both
@@ -141,7 +141,7 @@
                                 <strong>Founding Year:</strong> 2010
                             </p>
 
-                            <p>The Shree Malatesh English Medium School was founded back in the year 2010 with a clear
+                            <p>Shri Malatesh English Medium Primary And High school Gourapur was founded back in the year 2010 with a clear
                                 idea to provide quality and holistic education to our future generation. This school was
                                 established with the great motive to nurturing the most skill-full and creative minds of
                                 the society and we have been working in the same direction for years.</p>
@@ -178,7 +178,7 @@
                                 development. Our mission is to provide a nurturing environment that empowers students to
                                 reach their full potential and become responsible global citizens.</p>
 
-                            <p>At Shree Malatesh English Medium School, we prioritize:</p>
+                            <p>At Shri Malatesh English Medium Primary And High school Gourapur, we prioritize:</p>
                             <ul>
                                 <li><strong>Academic Rigor:</strong> Challenging curriculum and innovative teaching
                                     methods</li>
@@ -230,7 +230,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Shree Malatesh English Medium School</h3>
+                    <h3>Shri Malatesh English Medium Primary And High school Gourapur</h3>
                     <p>Committed to excellence in education and character development.</p>
                 </div>
                 <div class="footer-section">
