--- a/academics.html
+++ b/academics.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Academics - Shree Malatesh English Medium School</title>
+    <title>Academics - Shri Malatesh English Medium Primary And High school Gourapur</title>
     <link rel="shortcut icon" href="./images/logo.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
@@ -17,7 +17,7 @@
             <div class="nav-container">
                 <div class="logo">
                     <img src="images/logo.jpeg" alt="School Logo" class="logo-image">
-                    <span class="logo-text">SHREE MALATESH ENGLISH MEDIUM SCHOOL</span>
+                    <span class="logo-text">Shri Malatesh English Medium Primary And High school Gourapur</span>
                 </div>
                 <div class="nav-toggle" id="mobile-menu">
                     <span class="bar"></span>
@@ -255,7 +255,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Shree Malatesh English Medium School</h3>
+                    <h3>Shri Malatesh English Medium Primary And High school Gourapur</h3>
                     <p>Committed to excellence in education and character development.</p>
                 </div>
                 <div class="footer-section">
@@ -275,7 +275,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Shree Malatesh English Medium School. All rights reserved.</p>
+                <p>&copy; 2025 Shri Malatesh English Medium Primary And High school Gourapur. All rights reserved.</p>
             </div>
         </div>
     </footer>
