--- a/about.html
+++ b/about.html
@@ -250,7 +250,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Shree Malatesh English Medium School. All rights reserved.</p>
+                <p>&copy; 2025 Shri Malatesh English Medium Primary And High school Gourapur. All rights reserved.</p>
             </div>
         </div>
     </footer>
