--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="./images/logo.jpeg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"><meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
 
-    <title>Contact Us - Shree Malatesh English Medium School</title>
+    <title>Contact Us - Shri Malatesh English Medium Primary And High school Gourapur</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -15,7 +15,7 @@
             <div class="nav-container">
                 <div class="logo">
                     <img src="images/logo.jpeg" alt="School Logo" class="logo-image">
-                    <span class="logo-text">SHREE MALATESH ENGLISH MEDIUM SCHOOL</span>
+                    <span class="logo-text">Shri Malatesh English Medium Primary And High school Gourapur</span>
                 </div>
                 <div class="nav-toggle" id="mobile-menu">
                     <span class="bar"></span>
@@ -81,7 +81,7 @@
                                 </div>
                                 <div class="contact-text">
                                     <h3>Address</h3>
-                                    <p>Shree Malatesh English Medium School<br>
+                                    <p>Shri Malatesh English Medium Primary And High school Gourapur<br>
                                     Gourapur, TQ DI: Haveri 581110<br>
                                     Karnataka, India</p>
                                 </div>
@@ -209,7 +209,7 @@
                     </iframe>
                 </div>
                 <div class="map-info">
-                    <p><strong>Address:</strong> Shree Malatesh English Medium School, Gourapur, TQ DI: Haveri 581110, Karnataka</p>
+                    <p><strong>Address:</strong> Shri Malatesh English Medium Primary And High school Gourapur, TQ DI: Haveri 581110, Karnataka</p>
                     <p><strong>Directions:</strong> The school is easily accessible by road and public transportation from Haveri town.</p>
                 </div>
             </div>
@@ -231,7 +231,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Shree Malatesh English Medium School</h3>
+                    <h3>Shri Malatesh English Medium Primary And High school Gourapur</h3>
                     <p>Committed to excellence in education and character development.</p>
                 </div>
                 <div class="footer-section">
@@ -251,7 +251,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Shree Malatesh English Medium School. All rights reserved.</p>
+                <p>&copy; 2025 Shri Malatesh English Medium Primary And High school Gourapur. All rights reserved.</p>
             </div>
         </div>
     </footer>
