--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shree Malatesh English Medium School - Home</title>
+    <title>Shri Malatesh English Medium Primary And High school Gourapur - Home</title>
     <link rel="stylesheet" href="css/style.css">
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
 
@@ -18,7 +18,7 @@
             <div class="nav-container">
                 <div class="logo">
                     <img src="images/logo.jpeg" alt="School Logo" class="logo-image">
-                    <span class="logo-text">SHREE MALATESH ENGLISH MEDIUM SCHOOL</span>
+                    <span class="logo-text">Shri Malatesh English Medium Primary And High school Gourapur</span>
                 </div>
                 <div class="nav-toggle" id="mobile-menu">
                     <span class="bar"></span>
@@ -67,7 +67,7 @@
             <div class="container">
                 <div class="hero-content">
                     <div class="hero-text">
-                        <h1 class="fade-in">Welcome to Shree Malatesh English Medium School</h1>
+                        <h1 class="fade-in">Welcome to Shri Malatesh English Medium Primary And High school Gourapur</h1>
                         <p class="fade-in-delay">Excellence in Education Since Our Foundation</p>
                         <p class="school-location fade-in-delay">Gourapur, TQ DI: Haveri 581110</p>
                         <div class="hero-buttons fade-in-delay">
@@ -146,8 +146,8 @@
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <h3>Address</h3>
-                            <p>Shree Malatesh English Medium School<br>
-                                Gourapur, TQ DI: Haveri 581110</p>
+                            <p>Shri Malatesh English Medium Primary And High school Gourapur<br>
+                                 , TQ DI: Haveri 581110</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -182,7 +182,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Shree Malatesh English Medium School</h3>
+                    <h3>Shri Malatesh English Medium Primary And High school Gourapur</h3>
                     <p>Committed to excellence in education and character development.</p>
                 </div>
                 <div class="footer-section">
@@ -202,7 +202,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Shree Malatesh English Medium School. All rights reserved.</p>
+                <p>&copy; 2025 Shri Malatesh English Medium Primary And High school Gourapur. All rights reserved.</p>
             </div>
         </div>
     </footer>
