--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                     <li class="nav-item">
                         <a href="news.html" class="nav-link">Events</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a href="downloads.html" class="nav-link">Downloads</a>
-                    </li> -->
+                    <li class="nav-item">
+                        <a href="downloads.html" class="nav-link">Documents</a>
+                    </li> 
                     <li class="nav-item">
                         <a href="contact.html" class="nav-link">Contact</a>
                     </li>
@@ -129,10 +129,10 @@
                         <h3>Admissions</h3>
                         <p>Join our school</p>
                     </a>
-                    <!-- <a href="downloads.html" class="link-card">
-                        <i class="fas fa-download"></i>
-                        <h3>Downloads</h3>
-                        <p>Forms and documents</p>
+                    <a href="downloads.html" class="link-card">
+                        <i class="fas fa-download">
+                        <h3>Documents</h3>
+                        <p>School official documents</p>
                     </a> -->
                 </div>
             </div>
@@ -191,6 +191,7 @@
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="academics.html">Academics</a></li>
                         <li><a href="admissions.html">Admissions</a></li>
+                        <li><a href="downloads.html">Documents</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
