--- a/downloads.html
+++ b/downloads.html
@@ -44,7 +44,7 @@
                         <a href="news.html" class="nav-link">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a href="downloads.html" class="nav-link active">Downloads</a>
+                        <a href="downloads.html" class="nav-link active">Documents</a>
                     </li>
                     <li class="nav-item">
                         <a href="contact.html" class="nav-link">Contact</a>
@@ -61,7 +61,7 @@
     <main>
         <section class="page-header">
             <div class="container">
-                <h1>Downloads</h1>
+                <h1>Documents</h1>
                 <p>Download forms, documents, and important school resources</p>
             </div>
         </section>
