--- a/downloads.html
+++ b/downloads.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="./images/logo.jpeg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Downloads - Shree Malatesh English Medium School</title><meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
+    <title>Downloads - Shree Malatesh English Medium School</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
+<style>
+    a{
+        text-decoration: none;
+    }
+</style>
 <body>
     <header>
         <nav class="navbar">
@@ -49,10 +54,6 @@
                     <li class="nav-item">
                         <a href="contact.html" class="nav-link">Contact</a>
                     </li>
-                    <br>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link"></a>
-                    </li>
                 </ul>
             </div>
         </nav>
@@ -70,8 +71,8 @@
             <div class="container">
                 <div class="download-categories">
                     <div class="category-section">
-                        <h2><i class="fas fa-file-alt"></i> Admission Forms</h2>
-                        <div class="download-grid">
+                        <!-- <h2><i class="fas fa-file-alt"></i> Admission Forms</h2> -->
+                        <!-- <div class="download-grid">
                             <div class="download-card">
                                 <div class="download-icon">
                                     <i class="fas fa-file-pdf"></i>
@@ -122,26 +123,26 @@
                                     </button>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
                     <div class="category-section">
-                        <h2><i class="fas fa-calendar-alt"></i> Academic Calendar & Timetables</h2>
+                        <h2><i class="fas fa-certificate"></i>Certificate</h2>
                         <div class="download-grid">
                             <div class="download-card">
                                 <div class="download-icon">
                                     <i class="fas fa-file-pdf"></i>
                                 </div>
                                 <div class="download-info">
-                                    <h3>Academic Calendar 2025-26</h3>
-                                    <p>Complete academic calendar with important dates and events</p>
+                                    <h3>Land Certificate</h3>
+                                    <p>Complete land certificate</p>
                                     <span class="file-size">PDF • 1.5 MB</span>
                                 </div>
                                 <div class="download-action">
-                                    <button class="download-btn" onclick="downloadFile('academic-calendar-2025-26.pdf')">
+                                    <a href="https://drive.google.com/file/d/1I6HTcgz43oUzEVBLt4HnSBOq49VOu3xh/view?usp=sharing"><button class="download-btn">
                                         <i class="fas fa-download"></i>
                                         Download
-                                    </button>
+                                    </button></a>
                                 </div>
                             </div>
 
@@ -150,15 +151,15 @@
                                     <i class="fas fa-file-pdf"></i>
                                 </div>
                                 <div class="download-info">
-                                    <h3>Class Timetable - Primary (1st-5th)</h3>
-                                    <p>Daily class schedule for primary classes</p>
+                                    <h3>Bulding safety certificate</h3>
+                                    <p>Complete Bulding safety certificate</p>
                                     <span class="file-size">PDF • 900 KB</span>
                                 </div>
                                 <div class="download-action">
-                                    <button class="download-btn" onclick="downloadFile('primary-timetable.pdf')">
+                                    <a href="https://drive.google.com/file/d/1kdvqxXJcwJCovCJFpJnOuw2Tqfu9Mmsd/view?usp=sharing"><button class="download-btn">
                                         <i class="fas fa-download"></i>
                                         Download
-                                    </button>
+                                    </button></a>
                                 </div>
                             </div>
 
@@ -167,15 +168,15 @@
                                     <i class="fas fa-file-pdf"></i>
                                 </div>
                                 <div class="download-info">
-                                    <h3>Class Timetable - Secondary (6th-10th)</h3>
-                                    <p>Daily class schedule for secondary classes</p>
+                                    <h3>Society Registration certificate</h3>
+                                    <p>Complete Society Registration certificate</p>
                                     <span class="file-size">PDF • 1.1 MB</span>
                                 </div>
                                 <div class="download-action">
-                                    <button class="download-btn" onclick="downloadFile('secondary-timetable.pdf')">
+                                    <a href="https://drive.google.com/file/d/1ApbBnLO9eg7jIqyhbeShajS7ypg9dAFG/view?usp=sharing"><button class="download-btn">
                                         <i class="fas fa-download"></i>
                                         Download
-                                    </button>
+                                    </button></a>
                                 </div>
                             </div>
 
@@ -184,21 +185,21 @@
                                     <i class="fas fa-file-pdf"></i>
                                 </div>
                                 <div class="download-info">
-                                    <h3>Examination Schedule</h3>
-                                    <p>Monthly and quarterly examination dates</p>
+                                    <h3>Sanitary certificate</h3>
+                                    <p>Complete Sanitary certificate</p>
                                     <span class="file-size">PDF • 700 KB</span>
                                 </div>
                                 <div class="download-action">
-                                    <button class="download-btn" onclick="downloadFile('exam-schedule.pdf')">
+                                    <a href="https://drive.google.com/file/d/1q1_Qb5917bUF_DAa3YS7ylAJwxwEr6Ni/view?usp=sharing"><button class="download-btn">
                                         <i class="fas fa-download"></i>
                                         Download
-                                    </button>
+                                    </button></a>
                                 </div>
                             </div>
                         </div>
                     </div>
 
-                    <div class="category-section">
+                    <!-- <div class="category-section">
                         <h2><i class="fas fa-calendar-times"></i> Holiday Lists</h2>
                         <div class="download-grid">
                             <div class="download-card">
@@ -235,9 +236,9 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
-                    <div class="category-section">
+                    <!-- <div class="category-section">
                         <h2><i class="fas fa-file-invoice"></i> Circulars & Notices</h2>
                         <div class="download-grid">
                             <div class="download-card">
@@ -291,9 +292,9 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
-                    <div class="category-section">
+                    <!-- <div class="category-section">
                         <h2><i class="fas fa-book"></i> Syllabus & Curriculum</h2>
                         <div class="download-grid">
                             <div class="download-card">
@@ -346,7 +347,7 @@
                                     </button>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
