--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
                         <h3>Admissions</h3>
                         <p>Join our school</p>
                     </a>
-                    <a href="downloads.html" class="link-card">
+<!--                     <a href="downloads.html" class="link-card">
                         <i class="fas fa-download">
                         <h3>Documents</h3>
                         <p>School official documents</p>
-                    </a> -->
+                    </a>  -->
                 </div>
             </div>
         </section>
