--- a/about.html
+++ b/about.html
@@ -46,9 +46,9 @@
                     <li class="nav-item">
                         <a href="news.html" class="nav-link">Events</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a href="downloads.html" class="nav-link">Downloads</a>
-                    </li> -->
+                    <li class="nav-item">
+                        <a href="downloads.html" class="nav-link">Documents</a>
+                    </li>
                     <li class="nav-item">
                         <a href="contact.html" class="nav-link">Contact</a>
                     </li>
