--- a/downloads.html
+++ b/downloads.html
@@ -180,6 +180,40 @@
                                 </div>
                             </div>
 
+                        <div class="download-card">
+                                <div class="download-icon">
+                                    <i class="fas fa-file-pdf"></i>
+                                </div>
+                                <div class="download-info">
+                                    <h3>Mandatory Public Disclosure</h3>
+                                    <p>Complete mandatory Public Disclosure</p>
+                                    <span class="file-size">PDF • 1.1 MB</span>
+                                </div>
+                                <div class="download-action">
+                                    <a href="https://drive.google.com/file/d/1sMZaVJyWxNP49ToIwOmEiy-Z1FL1MLIf/view?usp=sharing"><button class="download-btn">
+                                        <i class="fas fa-download"></i>
+                                        Download
+                                    </button></a>
+                                </div>
+                            </div>
+
+                            <div class="download-card">
+                                <div class="download-icon">
+                                    <i class="fas fa-file-pdf"></i>
+                                </div>
+                                <div class="download-info">
+                                    <h3>School Managing Committee</h3>
+                                    <p>Complete School Managing Committee</p>
+                                    <span class="file-size">PDF • 1.1 MB</span>
+                                </div>
+                                <div class="download-action">
+                                    <a href="https://drive.google.com/file/d/14eoMq1bP_Zas3fhusC_Yz_aSTxrNMab7/view?usp=sharing"><button class="download-btn">
+                                        <i class="fas fa-download"></i>
+                                        Download
+                                    </button></a>
+                                </div>
+                            </div>
+                            
                             <div class="download-card">
                                 <div class="download-icon">
                                     <i class="fas fa-file-pdf"></i>
