--- a/downloads.html
+++ b/downloads.html
@@ -146,6 +146,26 @@
                                 </div>
                             </div>
 
+                    <div class="category-section">
+                        <h2><i class="fas fa-certificate"></i>Certificate</h2>
+                        <div class="download-grid">
+                            <div class="download-card">
+                                <div class="download-icon">
+                                    <i class="fas fa-file-pdf"></i>
+                                </div>
+                                <div class="download-info">
+                                    <h3>parents Teachers Association</h3>
+                                    <p>Complete parents Teachers Association</p>
+                                    <span class="file-size">PDF • 800kb MB</span>
+                                </div>
+                                <div class="download-action">
+                                    <a href="https://drive.google.com/file/d/1iJmbGlAp5VepfyCf5tBBIuz8exetafmZ/view?usp=sharing"><button class="download-btn">
+                                        <i class="fas fa-download"></i>
+                                        Download
+                                    </button></a>
+                                </div>
+                            </div>
+                            
                             <div class="download-card">
                                 <div class="download-icon">
                                     <i class="fas fa-file-pdf"></i>
@@ -232,7 +252,7 @@
                                 </div>
                             </div>
                             
-
+                            <div class="download-card">
                                 <div class="download-icon">
                                     <i class="fas fa-file-pdf"></i>
                                 </div>
