--- a/downloads.html
+++ b/downloads.html
@@ -188,6 +188,42 @@
                                     <i class="fas fa-file-pdf"></i>
                                 </div>
                                 <div class="download-info">
+                                    <h3>Bulding RECOGNITION LETTER</h3>
+                                    <p>Complete RECOGNITION LETTER</p>
+                                    <span class="file-size">PDF • 900 KB</span>
+                                </div>
+                                <div class="download-action">
+                                    <a href="https://drive.google.com/file/d/12FxH69GayklUhwB_lloTbdt4sIVE9-F7/view?usp=sharing"><button class="download-btn">
+                                        <i class="fas fa-download"></i>
+                                        Download
+                                    </button></a>
+                                </div>
+                            </div>
+
+
+                            <div class="download-card">
+                                <div class="download-icon">
+                                    <i class="fas fa-file-pdf"></i>
+                                </div>
+                                <div class="download-info">
+                                    <h3>UDISE</h3>
+                                    <p>UDISE</p>
+                                    <span class="file-size">PDF • 607 KB</span>
+                                </div>
+                                <div class="download-action">
+                                    <a href="https://drive.google.com/file/d/1wtVJNGP6Xbj3-La0qTQsWSq3yYPKXNSN/view?usp=sharing"><button class="download-btn">
+                                        <i class="fas fa-download"></i>
+                                        Download
+                                    </button></a>
+                                </div>
+                            </div>
+                            
+
+                            <div class="download-card">
+                                <div class="download-icon">
+                                    <i class="fas fa-file-pdf"></i>
+                                </div>
+                                <div class="download-info">
                                     <h3>Society Registration certificate</h3>
                                     <p>Complete Society Registration certificate</p>
                                     <span class="file-size">PDF • 1.6 MB</span>
