--- a/downloads.html
+++ b/downloads.html
@@ -154,7 +154,7 @@
                                     <i class="fas fa-file-pdf"></i>
                                 </div>
                                 <div class="download-info">
-                                    <h3>parents Teachers Association</h3>
+                                    <h3>Prents Teachers Association</h3>
                                     <p>Complete parents Teachers Association</p>
                                     <span class="file-size">PDF • 800kb MB</span>
                                 </div>
