--- a/news.html
+++ b/news.html
@@ -84,6 +84,25 @@
                 <div class="tab-content active" id="upcoming">
                     <h2>Upcoming Events</h2>
                     <div class="events-grid">
+
+<div class="download-card">
+                                <div class="download-icon">
+                                    <i class="fas fa-file-pdf"></i>
+                                </div>
+                                <div class="download-info">
+                                    <h3>Year Planing</h3>
+                                    <p>Complete Year Planing</p>
+                                    <span class="file-size">XLSX • 14kb</span>
+                                </div>
+                                <div class="download-action">
+                                    <a href="https://docs.google.com/spreadsheets/d/15eJQ-cFLFO3TxZL0_1HnnoQc4IOkBWdR/edit?usp=sharing&ouid=109713650103738777231&rtpof=true&sd=true"><button class="download-btn">
+                                        <i class="fas fa-download"></i>
+                                        Download
+                                    </button></a>
+                                </div>
+                            </div>
+
+                        
                         <div class="event-card">
                             <div class="event-date">
                                 <div class="date-day">25</div>
