--- a/downloads.html
+++ b/downloads.html
@@ -152,7 +152,7 @@
                                     <i class="fas fa-file-pdf"></i>
                                 </div>
                                 <div class="download-info">
-                                    <h3>Prents Teachers Association</h3>
+                                    <h3>Parents Teachers Association</h3>
                                     <p>Complete parents Teachers Association</p>
                                     <span class="file-size">PDF • 800kb MB</span>
                                 </div>
@@ -169,8 +169,8 @@
                                     <i class="fas fa-file-pdf"></i>
                                 </div>
                                 <div class="download-info">
-                                    <h3>Bulding safety certificate</h3>
-                                    <p>Complete Bulding safety certificate</p>
+                                    <h3>Building safety certificate</h3>
+                                    <p>Complete Building safety certificate</p>
                                     <span class="file-size">PDF • 900 KB</span>
                                 </div>
                                 <div class="download-action">
