--- a/contact.html
+++ b/contact.html
@@ -38,9 +38,9 @@
                     <li class="nav-item">
                         <a href="facilities.html" class="nav-link">Facilities</a>
                     </li>
-                    <li class="nav-item">
+<!--                     <li class="nav-item">
                         <a href="gallery.html" class="nav-link">Gallery</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a href="news.html" class="nav-link">Events</a>
                     </li>
