--- a/downloads.html
+++ b/downloads.html
@@ -163,6 +163,25 @@
                                     </button></a>
                                 </div>
                             </div>
+
+
+                                                        <div class="download-card">
+                                <div class="download-icon">
+                                    <i class="fas fa-file-pdf"></i>
+                                </div>
+                                <div class="download-info">
+                                    <h3>Public Disclosure</h3>
+                                    <p>Complete public Disclosure</p>
+                                    <span class="file-size">PDF • 5 MB</span>
+                                </div>
+                                <div class="download-action">
+                                    <a href="https://drive.google.com/file/d/1UEIfIPlER4zZN-ZXcjPrIWNzK7k57L0f/view?usp=sharing"><button class="download-btn">
+                                        <i class="fas fa-download"></i>
+                                        Download
+                                    </button></a>
+                                </div>
+                            </div>
+
                             
                             <div class="download-card">
                                 <div class="download-icon">
