--- a/downloads.html
+++ b/downloads.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="./images/logo.jpeg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Downloads - Shree Malatesh English Medium School</title>
+    <title>Downloads - Shri Malatesh English Medium Primary And High school Gourapur</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -19,7 +19,7 @@
             <div class="nav-container">
                 <div class="logo">
                     <img src="images/logo.jpeg" alt="School Logo" class="logo-image">
-                    <span class="logo-text">SHREE MALATESH ENGLISH MEDIUM SCHOOL</span>
+                    <span class="logo-text">Shri Malatesh English Medium Primary And High school Gourapur</span>
                 </div>
                 <div class="nav-toggle" id="mobile-menu">
                     <span class="bar"></span>
@@ -546,7 +546,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Shree Malatesh English Medium School. All rights reserved.</p>
+                <p>&copy; 2025 Shri Malatesh English Medium Primary And High school Gourapur.</p>
             </div>
         </div>
     </footer>
