--- a/about.html
+++ b/about.html
@@ -86,11 +86,15 @@
                             <img src="./images/school_photo.jpeg" class="about-image1">
                             <img src="./images/studentsInClassRoom.jpeg" class="about-image1">
                             <img src="./images/studentsInClassRoom1.jpeg" class="about-image1">
+                            <img src="./images/sir1.jpeg" class="about-image1">
+                            <img src="./images/sir2.jpeg" class="about-image1">
 
                             <!-- Duplicate images for looping -->
                             <img src="./images/school_photo.jpeg" class="about-image1">
                             <img src="./images/studentsInClassRoom.jpeg" class="about-image1">
                             <img src="./images/studentsInClassRoom1.jpeg" class="about-image1">
+                            <img src="./images/sir1.jpeg" class="about-image1">
+                            <img src="./images/sir2.jpeg" class="about-image1">
                         </div>
                     </div>
                 </div>
