--- a/news.html
+++ b/news.html
@@ -90,8 +90,8 @@
                                     <i class="fas fa-file-pdf"></i>
                                 </div>
                                 <div class="download-info">
-                                    <h3>Year Planing</h3>
-                                    <p>Complete Year Planing</p>
+                                    <h3>Academic Calender</h3>
+                                    <p>Complete Academic Calender</p>
                                     <span class="file-size">XLSX • 14kb</span>
                                 </div>
                                 <div class="download-action">
