--- a/downloads.html
+++ b/downloads.html
@@ -146,6 +146,24 @@
                                 </div>
                             </div>
 
+
+                        <div class="download-card">
+                                <div class="download-icon">
+                                    <i class="fas fa-file-pdf"></i>
+                                </div>
+                                <div class="download-info">
+                                    <h3>Academic Calender</h3>
+                                    <p>Complete Academic Calender</p>
+                                    <span class="file-size">XLSX • 14kb</span>
+                                </div>
+                                <div class="download-action">
+                                    <a href="https://docs.google.com/spreadsheets/d/15eJQ-cFLFO3TxZL0_1HnnoQc4IOkBWdR/edit?usp=sharing&ouid=109713650103738777231&rtpof=true&sd=true"><button class="download-btn">
+                                        <i class="fas fa-download"></i>
+                                        Download
+                                    </button></a>
+                                </div>
+                            </div>
+                            
                             
                             <div class="download-card">
                                 <div class="download-icon">
