--- a/downloads.html
+++ b/downloads.html
@@ -164,6 +164,23 @@
                                 </div>
                             </div>
                             
+
+<div class="download-card">
+                                <div class="download-icon">
+                                    <i class="fas fa-file-pdf"></i>
+                                </div>
+                                <div class="download-info">
+                                    <h3>Fees Structure</h3>
+                                    <p>Complete Fees Structure</p>
+                                    <span class="file-size">XLSX • 272kb</span>
+                                </div>
+                                <div class="download-action">
+                                    <a href="https://drive.google.com/file/d/1q7y8j-c9R3r4G7JX5vSCjvscbfcjs9f-/view?usp=sharing"><button class="download-btn">
+                                        <i class="fas fa-download"></i>
+                                        Download
+                                    </button></a>
+                                </div>
+                            </div>
                             
                             <div class="download-card">
                                 <div class="download-icon">
