--- a/admissions.html
+++ b/admissions.html
@@ -179,10 +179,16 @@
 
                         </div>
                         <h3>Fee Structure</h3>
-                        <p><strong>Application Fee:</strong> Contact office</p>
-                        <p><strong>Admission Fee:</strong>Contact office</p>
-                        <p><strong>Annual Fee:</strong> Contact office</p>
-                        <p><strong>Transport Fee:</strong> As applicable</p>
+                              <p><strong>1st Grade</strong> 14000 RS</p>
+                              <p><strong>2nd Grade</strong> 14000 RS</p>
+                              <p><strong>3rd Grade</strong> 14000 RS</p>
+                              <p><strong>4th Grade</strong> 14000 RS</p>
+                              <p><strong>5th Grade</strong> 15000 RS</p>
+                              <p><strong>6th Grade</strong> 17000 RS</p>
+                              <p><strong>7th Grade</strong> 17000 RS</p>
+                              <p><strong>8th Grade</strong> 17000 RS</p>
+                              <p><strong>9th Grade</strong> 19000 RS</p>
+                              <p><strong>10th Grade</strong> 22000 RS</p>
                     </div>
                 </div>
             </div>
