--- a/downloads.html
+++ b/downloads.html
@@ -157,7 +157,7 @@
                                     <span class="file-size">XLSX • 14kb</span>
                                 </div>
                                 <div class="download-action">
-                                    <a href="https://docs.google.com/spreadsheets/d/15eJQ-cFLFO3TxZL0_1HnnoQc4IOkBWdR/edit?usp=sharing&ouid=109713650103738777231&rtpof=true&sd=true"><button class="download-btn">
+                                    <a href="https://drive.google.com/file/d/1USIZuPMjNpSFeIzpyjJNjaMGxLL_GQTE/view?usp=sharing"><button class="download-btn">
                                         <i class="fas fa-download"></i>
                                         Download
                                     </button></a>
@@ -198,6 +198,25 @@
                                     </button></a>
                                 </div>
                             </div>
+
+
+                            <div class="download-card">
+                                <div class="download-icon">
+                                    <i class="fas fa-file-pdf"></i>
+                                </div>
+                                <div class="download-info">
+                                    <h3>Self Certificate</h3>
+                                    <p>Self Certificate</p>
+                                    <span class="file-size">PDF • 800kb MB</span>
+                                </div>
+                                <div class="download-action">
+                                    <a href="https://drive.google.com/file/d/1ITjQwTAcmxhKb6CJjpwpcueAg4Wg0iAt/view?usp=sharing"><button class="download-btn">
+                                        <i class="fas fa-download"></i>
+                                        Download
+                                    </button></a>
+                                </div>
+                            </div>
+
 
 
                           <div class="download-card"> 
