--- a/news.html
+++ b/news.html
@@ -95,7 +95,7 @@
                                     <span class="file-size">XLSX • 14kb</span>
                                 </div>
                                 <div class="download-action">
-                                    <a href="https://docs.google.com/spreadsheets/d/15eJQ-cFLFO3TxZL0_1HnnoQc4IOkBWdR/edit?usp=sharing&ouid=109713650103738777231&rtpof=true&sd=true"><button class="download-btn">
+                                    <a href="https://drive.google.com/file/d/1USIZuPMjNpSFeIzpyjJNjaMGxLL_GQTE/view?usp=sharing"><button class="download-btn">
                                         <i class="fas fa-download"></i>
                                         Download
                                     </button></a>
