--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <a href="news.html" class="nav-link">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a href="downloads.html" class="nav-link">Documents</a>
+                        <a href="downloads.html" class="nav-link">Mandatory disclosure</a>
                     </li> 
                     <li class="nav-item">
                         <a href="contact.html" class="nav-link">Contact</a>
