--- a/downloads.html
+++ b/downloads.html
@@ -49,7 +49,7 @@
                         <a href="news.html" class="nav-link">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a href="downloads.html" class="nav-link active">Documents</a>
+                        <a href="downloads.html" class="nav-link active">Mandatory disclosure</a>
                     </li>
                     <li class="nav-item">
                         <a href="contact.html" class="nav-link">Contact</a>
@@ -62,8 +62,8 @@
     <main>
         <section class="page-header">
             <div class="container">
-                <h1>Documents</h1>
-                <p>Download forms, documents, and important school resources</p>
+                <h1>Mandatory Disclosure</h1>
+                <p>Get the forms, documents, and important school resources</p>
             </div>
         </section>
 
@@ -218,6 +218,23 @@
                             </div>
 
 
+                            <div class="download-card">
+                                <div class="download-icon">
+                                    <i class="fas fa-file-pdf"></i>
+                                </div>
+                                <div class="download-info">
+                                    <h3>Building safety certificate</h3>
+                                    <p>Complete Building safety certificate</p>
+                                    <span class="file-size">PDF • 900 KB</span>
+                                </div>
+                                <div class="download-action">
+                                    <a href="https://drive.google.com/file/d/1kdvqxXJcwJCovCJFpJnOuw2Tqfu9Mmsd/view?usp=sharing"><button class="download-btn">
+                                        <i class="fas fa-download"></i>
+                                        Download
+                                    </button></a>
+                                </div>
+                            </div>
+                            
 
                           <div class="download-card"> 
                                 <div class="download-icon">
@@ -236,23 +253,6 @@
                                 </div>
                             </div>
 
-                            
-                            <div class="download-card">
-                                <div class="download-icon">
-                                    <i class="fas fa-file-pdf"></i>
-                                </div>
-                                <div class="download-info">
-                                    <h3>Building safety certificate</h3>
-                                    <p>Complete Building safety certificate</p>
-                                    <span class="file-size">PDF • 900 KB</span>
-                                </div>
-                                <div class="download-action">
-                                    <a href="https://drive.google.com/file/d/1kdvqxXJcwJCovCJFpJnOuw2Tqfu9Mmsd/view?usp=sharing"><button class="download-btn">
-                                        <i class="fas fa-download"></i>
-                                        Download
-                                    </button></a>
-                                </div>
-                            </div>
 
                             <div class="download-card">
                                 <div class="download-icon">
